--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wordpress/block-serialization-default-parser": "^4.50.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
