--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ serde-wasm-bindgen = "0.6.3"
 [dev-dependencies]
 wasm-bindgen-test = "0.3.40"
 
+[dependencies.web-sys]
+version = "0.3"
+features = ["console"]
+
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
