--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ wee_alloc = { version = "0.4.5", optional = true }
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = { version = "1.0.111", features = [] }
 serde-wasm-bindgen = "0.6.3"
+wasm-bindgen-test = "0.3.40"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.40"
